welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:10: error: Int does not take parameters
	return occur();
                    ^